<resources>
    <string name="app_name">Softhub</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Rooms</string>
    <string name="title_notifications">Settings</string>
    <string name="register">REGISTER</string>
    <string name="forget_password">Forget password?</string>
    <string name="by_continuing_you_ve_agreed_to_terms_of_service_and_privacy_policy">By continuing you\'ve agreed to Terms of Service and Privacy Policy</string>
    <string name="login">LOGIN</string>
    <string name="password">password</string>
    <string name="shadow">shadow</string>
    <string name="email">email</string>
    <string name="create_new_account">CREATE NEW ACCOUNT</string>
    <string name="provide_correct_information">Provide correct Information</string>
    <string name="full_name">Full name</string>
    <string name="emails">Email</string>
    <string name="mobile_no">Mobile No</string>
    <string name="device_id">Device ID</string>
    <string name="passwords">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="registers">Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_success_popup">Registered successfully.Verification email has been sent. Please verify email.</string>
    <string name="image">image</string>
    <string name="add_new_device">Add New Device</string>
    <string name="_4_lamps">4 lamps</string>
    <string name="turned_on">turned on</string>
    <string name="brightness">BRIGHTNESS</string>
    <string name="humidity">HUMIDITY</string>
    <string name="_70_">70%</string>
    <string name="none_found">none found</string>
    <string name="none_paired">none paired</string>
    <string name="esptouch_message_permission">APP require Location permission to get Wi-Fi information. \nClick to request permission</string>
    <string name="esptouch_message_location">Please turn on GPS to get Wi-Fi information.</string>
    <string name="esptouch_message_wifi_connection">Please connect Wi-Fi first.</string>
    <string name="esptouch_message_wifi_frequency">Current Wi-Fi connection is 5G, but the device just support 2.4G.</string>
    <string name="esptouch1_location_permission_title">⚠️Warning</string>
    <string name="esptouch1_location_permission_message">On Android M or higher version, App can\'t get Wi-Fi connection information if you forbid Location permission.</string>
    <string name="esptouch1_configuring_message">Esptouch is configuring, please wait for a moment…</string>
    <string name="esptouch1_configure_wifi_change_message">Wi-Fi disconnected or changed</string>
    <string name="esptouch1_configure_result_failed">EspTouch failed</string>
    <string name="esptouch1_configure_result_failed_port">Create EspTouch task failed, the EspTouch port could be used by other thread</string>
    <string name="esptouch1_configure_result_success">EspTouch 完成</string>
    <string name="esptouch1_configure_result_success_item">BSSID = %1$s, InetAddress = %2$s</string>
    <string name="esptouch1_wifi_5g_message">Device don\'t support 5G Wi-Fi, please make sure the currently connected Wi-Fi is 2.4G, or you can try multicast</string>

</resources>