<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="0dp"
    android:background="@color/blacky"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/image"

        android:layout_height="200dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background"
            android:src="@drawable/living"
            android:scaleType="fitXY"
            android:contentDescription="@string/shadow" />

            <View
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_gravity="bottom"
                android:elevation="0dp"
                android:background="@drawable/custom_gradient_top"/>


        </FrameLayout>

    </LinearLayout>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/image"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:textColorHint="@color/recerver"
        android:backgroundTint="@color/recerver"
        android:drawableStart="@drawable/ic_person"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColor="@color/recerver"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_marginEnd="50dp"
        android:textColorHint="@color/recerver"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/recerver"
        android:drawableStart="@drawable/ic_lock"
        android:hint="@string/password"
        android:textColor="@color/recerver"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@id/password"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/chat_text"
        android:text="@string/login"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <Button
        android:id="@+id/RegisterBtn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@id/loginBtn"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_edittext"
        android:text="@string/register"
        android:textColor="@android:color/white"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/forgetPasstxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/RegisterBtn"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/forget_password"
        android:textColor="@color/recerver"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/termstxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/by_continuing_you_ve_agreed_to_terms_of_service_and_privacy_policy"
        android:textColor="@android:color/white"
        android:textSize="12sp" />


</RelativeLayout>